[package]
name = "rust-transactions-processing"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.228", features = ["derive"] }
clap = { version = "4.5.60", features = ["derive"] }
csv = "1.4.0"
env_logger = "0.11.9"
log = "0.4.29"
rust_decimal = { version = "1.40.0", features = ["serde"] }
